--- a/denped.css
+++ b/denped.css
@@ -42,3 +42,36 @@ html, body{
 	color: #6b8699;
 	text-indent: 20px;
 }
+
+#right {
+	margin-left: 325px;
+}
+
+#header {
+	height: 40px;
+	border-bottom: 2px solid #999;
+}
+
+#header p {
+	display: inline-block;
+	margin: 5px 0 0 10px;
+}
+#header p#subtitle {
+	margin-left: 63px
+}
+
+#header a{
+	float: right;
+	margin-right: 10px;
+	margin-top: 5px;
+}
+
+#title {
+	font-size: 24px;
+	font-weight: bold;
+}
+
+#footer {
+	height: 100px;
+	border-top: 2px solid #999;
+}
